feat: implement PUT /users/{userId}/articles/{articleId} endpoint
