# src/controllers/articleController.js
@@ -62,4 +62,31 @@ const findByUserIdAndArticleId = async (req, res) => {
   responseHelper.ok(req, res, article);
 };
 
-module.exports = { create, findAndCountAll, findByUserIdAndArticleId };
+/**
+ * Handler for PUT /users/{userId}/articles/{articleId}
+ *
+ * @param {Request} req - The Express request object.
+ * @param {Response} res - The Express response object.
+ */
+const updateByUserIdAndArticleId = async (req, res) => {
+  const { userId, articleId } = req.params;
+  const payload = req.body;
+
+  const user = await userService.findById(userId, { raw: true });
+  if (!user) {
+    responseHelper.notFound(req, res, errorMessages.USER_NOT_FOUND, errorCodes.USER_NOT_FOUND);
+    return;
+  }
+
+  const article = await articleService.findById(articleId, { raw: true });
+  if (!article) {
+    responseHelper.notFound(req, res, errorMessages.ARTICLE_NOT_FOUND, errorCodes.ARTICLE_NOT_FOUND);
+    return;
+  }
+
+  const filters = { userId, id: articleId };
+  const response = await articleService.update(filters, payload, { returning: true, raw: true });
+  responseHelper.ok(req, res, response);
+};
+
+module.exports = { create, findAndCountAll, findByUserIdAndArticleId, updateByUserIdAndArticleId };
